20200704_test_files/test_file
print('Hello World')

2+2

3-2

13*3

15/3

type(4)

type(3.3)

type("Hello Wolrd")

a=1

a

id(a)

b=a

b


5**2 % 거듭제곱
25
2.5**2
6.25
4**(1/2)
2.0

13//3 % 몫 구하기  연산자 확인

13%3  % 나머지 구하기  연산자 확인

print(True)
True
print(True)
print(False)
True
False
not False
print(True and False)
print(True or False)
print(not True)
print(not False)
False
True
False
True
print(4<3)
print(4>3)
print(4<=3)
print(4>=3)
print(4==3)
print(4!=3)
False
True
False
True
False
True
4=>3
print(4=>3)
  File "<ipython-input-30-96d751be2c7c>", line 1
    print(4=>3)
            ^
SyntaxError: invalid syntax

print(f"a={a}, b={b}, result={result}")
print(f"a={a}, b={b}, result={result}")
a=52345, b=66, result=7
 
print(f"a = {a}와, b = {b}를 나누었을때, result={result} 가 나머지로 남습니다.")
a = 52345와, b = 66를 나누었을때, result=7 가 나머지로 남습니다.
